# bad-site-checker-v2

./: README.md  pyproject.toml
docker/: Dockerfile
src/bad_site_checker/: main.py
